improve zh translation

--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -27,7 +27,7 @@
       "rotateRight": "向右旋转",
       "delete": "删除",
       "copy": "复制",
-      "enlarge": "放大",
+      "enlarge": "延长",
       "shorten": "缩短",
       "switchFilled": "填充 / 仅边框",
       "increaseTextSize": "增大文本大小",
